# Operating-Systems

./: .gitignore  README
Exercise 01/: osm.cpp
Exercise 02/: README
Exercise 03/: MapReduceFramework.cpp  README
Exercise 04/: README
Exercise 1/: CMakeLists.txt  README  main.cpp  osm.cpp  osm.s
Exercise 2/: uthreads.cpp
Exercise 3/: Barrier.cpp
Exercise 4/: VirtualMemory.cpp
